[package]
name = "dgdarc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.2", features = ["wav"] }
rand = "0.8.5"
serde = { version = "1.0.203", features = ["serde_derive"] }
toml = "0.8.14"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# WASM and stuff

[target.wasm32-unknown-unknown]
[profile.release]
opt-level = 'z'

[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen = "0.2.83"
